updates in aadhar_number

--- a/Grants.ipynb
+++ b/Grants.ipynb
@@ -721,38 +721,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "aadhaar_document = \"118221109\\nआधार\\nభారత విశిష్ట గుర్తింపు\\nభారత ప్రభుత్వం\\nUnique Identification Authority of India\\nGovernment of India\\nనమోదు సంఖ్య / Enrollment No.: 1358/91634/01110\\n05/11/2013\\nTo\\nమంచాల చైత్ర\\nManchala Chaitra\\nD/O Manchala Uma Mahesh\\n1-2\\nyellaigudem chennaraopet mandal\\nYellaigudem\\nYellaigudem\\nChennaraopet Warangal\\nAndhra Pradesh 506332\\n9849542434\\nML182211094FT\\nమీ ఆధార్ సంఖ్య / Your Aadhaar No. :\\n6183 8180 8283\\nఆధార్ - సామాన్యుని హక్కు\\nభారత ప్రభుత్వం\\nGovernment of India\\nమంచాల చైత్ర\\nManchala Chaitra\\nతల్లి : మందాల సునీత\\nMother: Manchala Sunitha\\nపుట్టిన తేదీ / DOB : 04/09/2012\\nస్త్రీ / Female\\n6183 8180 8283\\nఆధార్ - సామాన్యుని హక్కు\\nESCReNo\\nNew Ration Card No:\\nApplication No:\\nHead of the Family:\\nGas Connection:\\nNK\\nS No\\n1\\n2\\n3\\n4\\n5\\nఆహార భద్రత కార్డు\\nతెలంగాణ ప్రభుత్వం\\nRation Card No\\n369400020315\\nHOME\\nFSC Ration Card Search\\nఆహార, పౌరసరఫరాలు మరియు\\nవినియోగదారుల వ్యవహారాలు\\nDid RonCarl No\\nSearch\\nRATION CARD DETAILS\\n369400020315\\nFSC Reference No.:\\nIVH646051088128\\nCard Type:\\nFSC\\nApplication Status:\\n2611\\nSKS Form No:\\nwg12332583000\\nOffice Name:\\nChennaraopet\\nFPShop No:\\nApproved\\n4302014\\nXXXXXXXXXX\\nSingle\\nDistrict:\\nWarangal\\nIMPDS Status:\\nYes\\nConsumer No:\\n7032266356\\nKeyRegister SL.No:\\n442(4302014)\\nOld RCNo:\\nWAP2131018A0010\\nRATION CARD MEMBER DETAILS\\nMember Name\\nMANCHALA SUNITHA\\nManchala Sudeepa\\nManchala Naga Chaitanya\\nManchala Chaitra\\nMANCHALA UMAMAHESH\\nNATIONAL\\nINFORMATICS\\nCENTRE\\nDisdalmer Content on this Website is published and managed by Commissioner of Civil Supplies, Hyderabad.\\n\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "118221109\n",
+      "आधार\n",
+      "భారత విశిష్ట గుర్తింపు\n",
+      "భారత ప్రభుత్వం\n",
+      "Unique Identification Authority of India\n",
+      "Government of India\n",
+      "నమోదు సంఖ్య / Enrollment No.: 1358/91634/01110\n",
+      "05/11/2013\n",
+      "To\n",
+      "మంచాల చైత్ర\n",
+      "Manchala Chaitra\n",
+      "D/O Manchala Uma Mahesh\n",
+      "1-2\n",
+      "yellaigudem chennaraopet mandal\n",
+      "Yellaigudem\n",
+      "Yellaigudem\n",
+      "Chennaraopet Warangal\n",
+      "Andhra Pradesh 506332\n",
+      "9849542434\n",
+      "ML182211094FT\n",
+      "మీ ఆధార్ సంఖ్య / Your Aadhaar No. :\n",
+      "6183 8180 8283\n",
+      "ఆధార్ - సామాన్యుని హక్కు\n",
+      "భారత ప్రభుత్వం\n",
+      "Government of India\n",
+      "మంచాల చైత్ర\n",
+      "Manchala Chaitra\n",
+      "తల్లి : మందాల సునీత\n",
+      "Mother: Manchala Sunitha\n",
+      "పుట్టిన తేదీ / DOB : 04/09/2012\n",
+      "స్త్రీ / Female\n",
+      "6183 8180 8283\n",
+      "ఆధార్ - సామాన్యుని హక్కు\n",
+      "ESCReNo\n",
+      "New Ration Card No:\n",
+      "Application No:\n",
+      "Head of the Family:\n",
+      "Gas Connection:\n",
+      "NK\n",
+      "S No\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "ఆహార భద్రత కార్డు\n",
+      "తెలంగాణ ప్రభుత్వం\n",
+      "Ration Card No\n",
+      "369400020315\n",
+      "HOME\n",
+      "FSC Ration Card Search\n",
+      "ఆహార, పౌరసరఫరాలు మరియు\n",
+      "వినియోగదారుల వ్యవహారాలు\n",
+      "Did RonCarl No\n",
+      "Search\n",
+      "RATION CARD DETAILS\n",
+      "369400020315\n",
+      "FSC Reference No.:\n",
+      "IVH646051088128\n",
+      "Card Type:\n",
+      "FSC\n",
+      "Application Status:\n",
+      "2611\n",
+      "SKS Form No:\n",
+      "wg12332583000\n",
+      "Office Name:\n",
+      "Chennaraopet\n",
+      "FPShop No:\n",
+      "Approved\n",
+      "4302014\n",
+      "XXXXXXXXXX\n",
+      "Single\n",
+      "District:\n",
+      "Warangal\n",
+      "IMPDS Status:\n",
+      "Yes\n",
+      "Consumer No:\n",
+      "7032266356\n",
+      "KeyRegister SL.No:\n",
+      "442(4302014)\n",
+      "Old RCNo:\n",
+      "WAP2131018A0010\n",
+      "RATION CARD MEMBER DETAILS\n",
+      "Member Name\n",
+      "MANCHALA SUNITHA\n",
+      "Manchala Sudeepa\n",
+      "Manchala Naga Chaitanya\n",
+      "Manchala Chaitra\n",
+      "MANCHALA UMAMAHESH\n",
+      "NATIONAL\n",
+      "INFORMATICS\n",
+      "CENTRE\n",
+      "Disdalmer Content on this Website is published and managed by Commissioner of Civil Supplies, Hyderabad.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(aadhaar_document)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n",
+    "pattern = r'\\d{4}\\s\\d{4}\\s\\d{4}'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "match = re.search(pattern, aadhaar_document)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(393, 407), match='6183 8180 8283'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(match)"
+   ]
   },
   {
    "cell_type": "code",
